--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Whitesquare</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css">
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,300" type="text/css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 	<div id="wrapper">
@@ -27,17 +28,37 @@
 		<div id="heading">
 			<h1>ABOUT US</h1>
 		</div>
-		<aside></aside>
+		<aside>
+			<nav>
+				<ul>
+					<li><a href="#lorem">What is Lorem Ipsum?</a></li>
+					<li><a href="#why">Why do we use it?</a></li>
+					<li><a href="#russian">Текстовые рыбы на русском языке</a></li>
+				</ul>
+			</nav>
+		</aside>
 		<section></section>
-		<p>What is Lorem Ipsum?
+		<p id='lorem'>What is Lorem Ipsum?
 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 
-<p>Why do we use it?
+<p id='why'>Why do we use it?
 It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+
+<p id='russian'>В русском языке нет традиции использовать определенный текст в качестве рыбы, как в том же английском (как описано предыдущих абщацах). Зачастую, если какой-то человек хочет взять рыбу, он либо возьмет Lorem Ipsum, но иногда очень важно посмотреть, как тот или иной элемент выглядит на родном языке. Тогда в помощь приходят разные генераторы, как, например <a href="https://fishtext.ru/">Этот</a> (не беспокойтесь, реклама оплачена). Они позволяют вам создать несолько абзацев несвязного сухого текста, но зачастую это очень полезно.</p>
 
 
 	</div>
 
-	<footer></footer>
+	<footer>
+		<div class="me">© Евгений Дегтярев, 2021</div>
+		<div class="media">
+			<a href=""><i class="fa fa-vk" aria-hidden="true"></i></a>
+			<a href=""><i class="fa fa-youtube" aria-hidden="true"></i></a>
+			<a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a>
+			<a href=""><i class="fa fa-reddit" aria-hidden="true"></i></a>
+			<a href=""><i class="fa fa-google" aria-hidden="true"></i></a>
+			<a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+		</div>
+	</footer>
 </body>
 </html>
